@@ -25,11 +25,11 @@
 # so that projects such as mondrian can run on the very latest; we switch for a
 # specific revision number near to a release. Change 'xxx' the latest subversion
 # change number; and put the same number in 'project.revision.minor'.)
-project.revision=1.0.1-SNAPSHOT
+project.revision=1.0.1.500
 #project.revision=1.0.0.xxx
 
 project.revision.major=1
-project.revision.minor=0001494
+project.revision.minor=00010500
 
 ivy.artifact.id=olap4j
 ivy.artifact.group=org.olap4j
