@@ -317,7 +317,7 @@ abstract class XmlaOlap4jConnection implements OlapConnection {
         StringBuilder buf = new StringBuilder();
         for (String prop : databaseProperties.keySet()) {
             if (prop.startsWith(
-                XmlaOlap4jDriver.Property.CACHE.name()))
+                    XmlaOlap4jDriver.Property.CACHE.name()))
             {
                 // Skip over the pass-through properties for the cache.
                 continue;
